--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6444,11 +6444,14 @@ button.close {
   margin-top:150px;
   right: 15%;
   left: 15%;
-  z-index: 10;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  z-index: 100; /*10;*/
+  padding-top: 10px; /*20px;*/
+  padding-bottom: 100px; /*20px;*/
   color: #fff;
   text-align: center;
+  /* added 
+  overflow: hidden;
+  height: 100% */
 }
 .carousel-caption .btn {
   text-shadow: none;
