--- a/css/index.css
+++ b/css/index.css
@@ -26,6 +26,7 @@
     background-color: #333;
     height: 500px;
     position: relative;
+    margin-bottom: 50px;
 }
 .hero .container {
     height: 100%;
